--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
 
 script :
-        - npm install jshint --save-dev
-        - node_modules./bin/jshint src
+        - npm test
+        - node_modules/.bin/jshint src
